--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="background">#06030E</color>
-    <color name="input">#090B19</color>
+    <color name="input">#0A0A17</color>
     <color name="background_secondary">#0E0F22</color>
     <color name="text">#FFFFFF</color>
     <color name="text_accent">#9780E5</color>
@@ -16,4 +16,5 @@
     <color name="accent">#133641</color>
     <color name="dark_accent_2">#2B2D5B</color>
     <color name="hard_label">#FF6868</color>
+    <color name="medium_label">#FFD468</color>
 </resources>
